prodMetadata/src/objects/Donation_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Donation History</relationshipLabel>
        <relationshipName>Donation_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_Posted__c</fullName>
        <label>Amount Posted</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donor_Year_Key__c</fullName>
        <externalId>true</externalId>
        <label>Donor Year Key</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Donation History</label>
    <nameField>
        <displayFormat>DH-{000000}</displayFormat>
        <label>Donation History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>